Add Paystack payment integration

--- a/.env.example
+++ b/.env.example
@@ -27,5 +27,10 @@ BINANCE_PAY_API_KEY=your-binance-pay-api-key
 BINANCE_PAY_SECRET=your-binance-pay-secret
 BINANCE_MERCHANT_ID=your-merchant-id
 
+# Paystack Configuration (for payment processing)
+# Get these from Paystack Dashboard: https://dashboard.paystack.com/#/settings/developer
+PAYSTACK_SECRET_KEY=sk_test_your_secret_key_here
+PAYSTACK_PUBLIC_KEY=pk_test_your_public_key_here
+
 # App URL (for webhooks)
 APP_URL=http://localhost:3000
