--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "express-validator": "^7.0.1",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
+    "paystack": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
