--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 node_modules/
 .env
+.env.local
+.env*.local
 *.log
 .DS_Store
 firebase-service-account.json
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.swp
+*~
